<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item app:showAsAction="ifRoom"
        android:id="@+id/options_menu"
        android:title="">
        <menu >
        <item
            android:id="@+id/action_profile"
            android:orderInCategory="100"
            android:title="@string/action_profile"
            android:icon="@drawable/profile"
            app:showAsAction="never" />


        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            android:icon="@drawable/settings"
            app:showAsAction="never" />


        <item
            android:id="@+id/action_invite"
            android:orderInCategory="100"
            android:icon="@drawable/invite"
            android:title="@string/action_invite"
            app:showAsAction="never" />


         <item
            android:id="@+id/action_logOut"
            android:orderInCategory="100"
            android:icon="@drawable/log_out"
            android:title="@string/action_logOut"
            app:showAsAction="never" />
        </menu>
    </item>

</menu>