<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



            <item
                android:id="@+id/nav_home"
                android:orderInCategory="100"
                android:title="@string/menu_home"
                android:icon="@drawable/home"
                app:showAsAction="never" />


            <item
                android:id="@+id/nav_monthlyCalendar"
                android:orderInCategory="100"
                android:title="@string/menu_calendar"
                android:icon="@drawable/task_calendar"
                app:showAsAction="never" />


            <item
                android:id="@+id/nav_progress"
                android:orderInCategory="100"
                android:icon="@drawable/progress"
                android:title="@string/menu_progress"
                app:showAsAction="never" />


            <item
                android:id="@+id/nav_setting"
                android:orderInCategory="100"
                android:icon="@drawable/settings"
                android:title="@string/menu_setting"
                app:showAsAction="never" />

        </menu>
